:card_index: Add a couple of type stub libraries to help mypy

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ mypy = "*"
 twine = "*"
 vermin = "*"
 pylint = "*"
+types-pygments = "*"
+types-setuptools = "*"
 
 [requires]
 python_version = "3.11"
