:card_index: Add some extra keywords

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,11 @@ maintainer = Dave Pearson
 maintainer_email = davep@davep.org
 license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
 license_files = LICENCE
-keywords = terminal
+keywords =
+    terminal
+    packaging
+    pypi
+    client
 classifiers =
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Environment :: Console
