--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ platforms = any
 include_package_data = True
 python_requires = >=3.10,<3.13
 install_requires =
+    packaging
     textual>=0.56.4
     httpx
 
